# jogo-damas-cli

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Checkers  Checkers(1)  Checkers.project  Checkers.project.xml  Checkers.workspace  Makefile  Relatorio Introdução a Programação.docx  Relatorio Introdução a Programação.odt  Tile.h  build.sh  cmake_install.cmake  common.h  eat().h  isValidMove()(1).h  isValidMove().h  loadGame().h  main.cpp  menu().h  newBoard().h  newGame()(1).h  printBoard().h  saveGame()(1).h  setup.h  test.txt
.codelite/: Checkers.session  Checkers.session.xml  refactoring(1).db  refactoring.db
Damas/: Damas.project
data/: test(1).txt
include/: Tile.h  coordinateToNumber().h  eat().h  isValidMove().h  loadGame()(1).h  loadGame().h  menu()(1).h  menu().h  move().h  newBoard().h  newGame().h  printBoard()(1).h  printBoard().h  saveGame()(1).h  saveGame().h  setup(1).h
src/: coordinateToNumber.cpp  eat.cpp  isValidMove.cpp  loadGame.cpp  main(1).cpp  main.cpp  menu.cpp  move.cpp  newBoard.cpp  newGame.cpp  printBoard.cpp  saveGame.cpp
